# article-gen-v6

./: plan.md  planV6.md  pyproject.toml  requirements.txt
